Restore circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,26 +35,25 @@ nightlyTestConfig: &nightlyTestConfig
 workflows:
   test-build-deploy:
     jobs:
-      - creation-ssh-gcp-ubuntu-lb
-      # - build:
-      #     filters:
-      #       tags:
-      #         only: /.*/
-      # - container-tests
-      # - unit-tests
-      # - fast-integration-tests:
-      #     requires:
-      #      - build
-      # - integration-tests-creation-footloose:
-      #     <<: *integrationTestConfig
-      # - integration-tests-upgrade-footloose:
-      #     <<: *integrationTestConfig
-      # - creation-ssh-gcp-centos:
-      #     <<: *integrationTestConfig
-      # - creation-ssh-gcp-ubuntu:
-      #     <<: *integrationTestConfig
-      # - creation-ssh-gcp-ubuntu-lb:
-      #     <<: *integrationTestConfig
+      - build:
+          filters:
+            tags:
+              only: /.*/
+      - container-tests
+      - unit-tests
+      - fast-integration-tests:
+          requires:
+           - build
+      - integration-tests-creation-footloose:
+          <<: *integrationTestConfig
+      - integration-tests-upgrade-footloose:
+          <<: *integrationTestConfig
+      - creation-ssh-gcp-centos:
+          <<: *integrationTestConfig
+      - creation-ssh-gcp-ubuntu:
+          <<: *integrationTestConfig
+      - creation-ssh-gcp-ubuntu-lb:
+          <<: *integrationTestConfig
 
   nightly:
     triggers:
