--- a/cmd/gitops-repo-broker/Dockerfile
+++ b/cmd/gitops-repo-broker/Dockerfile
@@ -6,5 +6,8 @@ ADD ./known_hosts.sh /home/wkp/known_hosts.sh
 RUN bash /home/wkp/known_hosts.sh /etc/ssh/ssh_known_hosts && \
     rm /home/wkp/known_hosts.sh
 
+RUN wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.11.0/kubeseal-linux-amd64 -O kubeseal && \
+    install -m 755 kubeseal /usr/local/bin/kubeseal
+
 ADD gitops-repo-broker /
 ENTRYPOINT ["/gitops-repo-broker"]
