Adds featureGates to the ui

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -33,6 +33,9 @@ service:
   port: 80
 config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   demoMode: false
+  featureGates:
+    teamWorkspaces: true
+    fleetManagement: false
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
     url: ''
