[ WKP-677 ] Check required disk space before cluster installation (#1316)
* Add initial code for checking required disk space

* Add minimum disk space

* Remove footloose disk check

* Change variable naming

* Use syscall.Statfs() to check free disk space

* Create a function to check free disk space

* Add preflight alias to connectivity command

* Only check minimum disk space if disk-space flag is called

* Add --disk-space flag when calling connectivity check command

* Add minDiskSpace to config.yaml

* Edit minDiskSpace description in config.yaml

* Add minDiskSpace to config.go

* Add minSpace to config unit tests

* Export MinDiskSpace connectivity package to use

* Fix minDiskSpace key in config_test.o

* Add minDiskSpace to config.yaml in integration tests

* Fix camel case naming for missingMinDiskSpace

* Use sshClient.Command() instead of syscall

* Adds very rough support for footloose conn check

* Update pkg/utilities/config/config.go

Co-authored-by: Simon <footless@gmail.com>

* Change error message in config_test.go

* Add --skip-preflight-checks flag to run command

* Fix if condition block in setup.sh

* Add initial testing script for min disk space

* Change test naming to preflight checks

* Change test naming in circleci config.yaml

* Use *setup-base-gce-config-yaml in preflight checks

* Add test

* Check if preflight checks works

* Comment out all workflow except preflight checks

* Uncomment build

* Removed commented tests

* Check preflight test

* Use shorter name for preflight checks test

* Add 1 worker

* Add large minDiskSpace to config.yaml

* Fix wrong if condition in setup.sh

* Add a readable error

* Fix assert input

* Add assert.EqualError()

* Test EqualError with dummy error

* Remove cluster cleanup

* Change assert error message

* Add correct error message in assert

* Add diskSpace check to footloose too.

* Add available dis

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,8 @@ workflows:
           <<: *integrationTestConfig
       - creation-ssh-gcp-ubuntu-lb:
           <<: *integrationTestConfig
+      - preflight-ssh-gcp-centos:
+          <<: *integrationTestConfig
 
   nightly:
     triggers:
@@ -703,3 +705,52 @@ jobs:
           path: /home/circleci/src/github.com/weaveworks/wks/test/integration/test/sonobuoy-test-results/plugins/e2e/results
       - store_artifacts:
           path: /home/circleci/src/github.com/weaveworks/wks/test/integration/test/sonobuoy-test-results.tar.gz
+
+  preflight-ssh-gcp-centos: &preflight-ssh-gcp-centos
+    docker:
+      - image: quay.io/wks/build:master-134af34f
+        environment:
+          <<: *integrationTestCommonEnv
+          # Don't USE the default image, use IMAGE_NAME instead
+          IMAGE_NAME: centos-cloud/centos-7
+          NUM_MASTERS: 1
+          NUM_WORKERS: 1
+          USE_LB: false
+          CLUSTER_VERSIONS: '1.16.11'
+          SKIP_COMPONENTS: true
+    working_directory: /home/circleci/src/github.com/weaveworks/wks
+    steps:
+      - setup-integration-test-env
+      - run:
+          <<: *setup-base-gce-config-yaml
+      - run:
+          name: Change minDiskSpace value
+          command: |
+            cd test/integration/test
+            sed -i "s/minDiskSpace:.*/minDiskSpace: 260000/" config.yaml
+      - run:
+          name: Run e2e tests
+          command: |
+            export PATH=$GOROOT/bin:$PATH
+
+            cd test/integration/test
+
+            lb_count=$([ "$USE_LB" == "true" ] && echo "1" || echo "0")
+            export NUM_HOSTS=$(($NUM_MASTERS + $NUM_WORKERS + $lb_count))
+            export USE_IMAGE=0
+            # provision $NUM_HOSTS GCE VMs
+            ../bin/internal/run-integration-tests.sh up
+            ../bin/internal/update-config-with-node-info.sh $NUM_MASTERS $USE_LB
+
+            # e.g. wkp-ci-test-bot from 1passwords
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+            go test -v -run TestPreflightChecks --timeout=99999s
+
+            ../bin/internal/run-integration-tests.sh destroy
+      - run:
+          # Ensures that the GCP resources are deleted even if the previous step fails
+          name: Destroy GCP resources
+          command: |
+            cd test/integration/test
+            ../bin/internal/run-integration-tests.sh destroy
+          when: on_fail
