[WKP-947] Seal the user token required to enable team workspaces (#1317)
* Seal the user token required to enable team workspaces

* Add github-user-token secret also in repository-controller

* Adds wk workspaces enable command

* Add git commit and push flags in workspaces enable

* Remove backend-params.yaml

* Adds WriteConfig() method to write updated config.yaml back to the filesystem

* Read teamWorkspaces flag in components.js

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -34,7 +34,7 @@ service:
 config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   demoMode: false
   featureGates:
-    teamWorkspaces: true
+    teamWorkspaces: false
     fleetManagement: false
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
