Check links daily, use less GH Action minutes this way. (#1310)
Fixes: #1309

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,14 +1,8 @@
 name: docs
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the master branch
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   link-checker:
