Add kubeseal checksum in gitops-repo-broker Dockerfile (#1337)

--- a/cmd/gitops-repo-broker/Dockerfile
+++ b/cmd/gitops-repo-broker/Dockerfile
@@ -7,6 +7,7 @@ RUN bash /home/wkp/known_hosts.sh /etc/ssh/ssh_known_hosts && \
     rm /home/wkp/known_hosts.sh
 
 RUN wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.11.0/kubeseal-linux-amd64 -O kubeseal && \
+    echo 'ae580e28400b4aa806adf3fd6b002799763820927bd6ac5a5df5250d50377e67  kubeseal' | sha256sum -c && \
     install -m 755 kubeseal /usr/local/bin/kubeseal
 
 ADD gitops-repo-broker /
