Fix cluster-components test (#1342)
* Add enabledFeatures section in config.yaml used in tests

* Disable team-workspaces components

* Set expected pushes to 2 if components are deployed

Co-authored-by: Sara El-Zayat <sara@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -6,6 +6,8 @@ dockerIOUser: 'dummy'
 dockerIOPasswordFile: '/etc/passwd'
 sealedSecretsCertificate: ''
 sealedSecretsPrivateKey: ''
+enabledFeatures:
+  teamWorkspaces: false
 eksConfig:
   clusterRegion: 'eu-west-3'
   kubernetesVersion: '1.14'
