--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -826,7 +826,7 @@ jobs:
           # Don't USE the default image, use IMAGE_NAME instead
           IMAGE_NAME: centos-cloud/centos-7
           NUM_MASTERS: 3
-          NUM_WORKERS: 2
+          NUM_WORKERS: 4 # 1 + 3 spare machines
           USE_LB: true
           CLUSTER_VERSIONS: '1.16.11'
           SKIP_COMPONENTS: true
@@ -851,7 +851,7 @@ jobs:
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
-            go test -v -run TestRemoveThenAddNode --timeout=99999s
+            go test -v -run TestBasicLifeCycle --timeout=99999s
 
             ../bin/internal/run-integration-tests.sh destroy
       - run:
