[WKP-1111] Adds a team workspaces test (#1382)
* [WKP-1111] Adds a team workspaces test

* wip

* undo acciendtal config.yaml commit

* Small updates

* again w/ the config..

* Get list of organizations

* Change return type

* Add github service url

* Add http request context

* Remove config.yaml data

* Revert google provider version

* Revert config.yaml

* Comment unused function

* Refactor

* Send post request to create a ws

* Remove unused function

* Remove unused function

* Update sealed secret generation

* Edit sealed secrets cert path

* Add integration test in circleci for workspaces

* copy sealed secret cert to repo path

* Update repo key path

* Add organization name

* Add circle ci conf

* Change repoURL

* Refactor

* Resolve conflict

* Revert circle ci config

* Resolve conflict

* Add workspaces test

* Get workspaces list

* Fix linting error

* Change assertion

* Add team-workspaces-tests to jobs in circleci

* Remove local testing script

* Pass workspace.Workspace instead of JSON to makeWorkspace fn

* Refactor

* Remove debugging code

* Assert orgs isn't empty

* Add env vars for workspaces

* Use wkBin

* Use exec.Command

* Add correct sealedsecret path to enable ws cmd

* Change kubesealPath location

* Add --cluster-dir flag

* Add cert path

* Remove cluster-dir

* Add c.tmpDir

* Refactor

* Add wkBin

* Set SKIP_COMPONENTS=flase

* remove comments

Co-authored-by: Sara El-Zayat <sara@weave.works>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,7 @@ workflows:
       - preflight-ssh-gcp-centos
       - cluster-lifecycle-tests
       - cluster-lifecycle-footloose-tests
+      - enable-workspaces-tests
 
   nightly:
     triggers:
@@ -888,3 +889,59 @@ jobs:
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
             go test -v -run TestLifeCycleRemoveMasterNodes --timeout=1800s
+
+  enable-workspaces-tests:
+    docker:
+      - image: quay.io/wks/build:master-134af34f
+        environment:
+          <<: *integrationTestCommonEnv
+          # Don't USE the default image, use IMAGE_NAME instead
+          IMAGE_NAME: centos-cloud/centos-7
+          NUM_MASTERS: 1
+          NUM_WORKERS: 1 # 1 + 3 spare machines
+          USE_LB: false
+          CLUSTER_VERSIONS: '1.16.11'
+          SKIP_COMPONENTS: false
+    working_directory: /home/circleci/src/github.com/weaveworks/wks
+    steps:
+      - setup-integration-test-env
+      - run:
+          <<: *setup-base-gce-config-yaml
+      - run:
+          name: Add github org values
+          command: |
+            cd test/integration/test
+            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_ORG/" config.yaml
+      - run:
+          name: Run e2e tests
+          command: |
+            export PATH=$GOROOT/bin:$PATH
+
+            cd test/integration/test
+
+            lb_count=$([ "$USE_LB" == "true" ] && echo "1" || echo "0")
+            export NUM_HOSTS=$(($NUM_MASTERS + $NUM_WORKERS + $lb_count))
+            export USE_IMAGE=0
+            # provision $NUM_HOSTS GCE VMs
+            ../bin/internal/run-integration-tests.sh up
+            ../bin/internal/update-config-with-node-info.sh $NUM_MASTERS $USE_LB
+
+            export WORKSPACES_ORG_ADMIN_USER=$WKP_GITHUB_USER
+            export WORKSPACES_ORG_ADMIN_TOKEN=$WKP_WORKSPACES_GITHUB_TOKEN
+
+            # e.g. wkp-ci-test-bot from 1passwords
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+            go test -v -run TestEnableWorkspaces --timeout=99999s
+
+            ../bin/internal/run-integration-tests.sh destroy
+      - run:
+          # Ensures that the GCP resources are deleted even if the previous step fails
+          name: Destroy GCP resources
+          command: |
+            cd test/integration/test
+            ../bin/internal/run-integration-tests.sh destroy
+
+            # delete the github repository if it's hanging
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+            hub delete -y "${WKP_GITHUB_USER}/${CIRCLE_JOB}-${CIRCLE_BUILD_NUM}"
+          when: on_fail        
