--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -399,6 +399,8 @@ jobs:
             export GITHUB_TOKEN=bar
             go test -v -run TestRunMultipleSetupInstall
 
+            go test -v -run TestImageRepositoryCheck
+
   integration-tests-creation-footloose:
     machine:
       image: ubuntu-1604:202004-01
@@ -810,7 +812,7 @@ jobs:
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
-            go test -v -run TestPreflightChecks --timeout=99999s
+            go test -v -run TestMachinesChecks --timeout=99999s
 
             ../bin/internal/run-integration-tests.sh destroy
       - run:
