[WKP-1202] Adds a status icon to each cluster component (#1411)
* [WKP-1202] Adds a status icon to each cluster component

- This version bases status off the available replicas of any deployment
  in the cluster components namespace (with a small exception for flux
  which has multiple cluster components in a single namespace).

* Clarify some variable names / labels

* Adds tests for cluster component status

* Apply suggestions from code review

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -101,6 +101,9 @@ config: # remember to consult `ui/src/entities/config.ts` before making any chan
     node_pods_count:
       label: Pods
       query: sum (kube_pod_info) by (__name__,node)
+    deployment_replicas_unavailable:
+      label: Deployments unavailable
+      query: kube_deployment_status_replicas_unavailable
   clusterInfo:
     name: My Cluster
     provider: ''
